<resources>
    <string name="app_name">project1801</string>
    <string name="title_activity_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <color name="custom">#3D5069</color>

    <string name="search">Search</string>
    <string name="basic_info">Basic Info</string>
    <string name="ticket_info">Ticket Info</string>
    <string name="route_info">Enter Route Info</string>
    <string name="destination">Destination</string>
    <string name="departure_point">Departure Point</string>
    <string name="departure_date">Departure Date</string>
    <string name="departure_time"> Departure Time</string>
    <string name="available_seats">Available Seats</string>
    <string name="bus_type">Bus Type</string>
    <string name="bus_id">Bus ID</string>
    <string name="driver_id">Driver ID</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="statistic">Statistic</string>
    <string name="delete_route">Delete Route</string>
    <string name="save_route">Save Route</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="ok_button">OK</string>
    <string name="seats">Seats</string>
    <string name="Search_Route">Search Route</string>
    <string name="buy_tickets">Select a route to buy your tickets</string>
    <string name="ticket_type">Type</string>
    <string name="passenger_firstname">Firstname</string>
    <string name="passenger_lastname">Lastname</string>
    <string name="passenger_id">Passenger ID</string>
    <string name="price">Price</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="card_info">Card Info</string>
    <string name="cardholder">Card Holder</string>
    <string name="cardid">Card ID</string>
    <string name="expirationdate">Expiration Date</string>
    <string name="cv">CV code</string>
    <string name="checkout">Checkout</string>
    <string name="track_route_info">Track the route you want</string>
    <string name="track_route">Track Route</string>
    <string name="title_activity_show_route">Map</string>
    <string name="show_time">Show Time</string>
    <string name="passenger_info">Enter passenger info</string>
    <string name="find_ticket">Find Ticket</string>
    <string name="print_ticket">Print Ticket</string>
</resources>
