<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/basic_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/route_info"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/destination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/destination"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/destinations_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_point"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/departure_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/text_departure_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="yyyy/MM/dd"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/departure_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/bus_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/bus_id"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/bus_ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/driver_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/driver_id"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/driver_ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/arrival_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/arrival_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:popupBackground="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="32dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/save_route_button"
                    android:layout_width="145dp"
                    android:layout_height="31dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:text="@string/save_route"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </RelativeLayout>
        </TableRow>


    </TableLayout>
</ScrollView>