<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/basic_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/route_info"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/destination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/destination"
                android:textSize="16sp"
                android:paddingEnd="20dp" />

            <Spinner
                android:id="@+id/destinations_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_point"
                android:textSize="16sp"
                android:paddingEnd="20dp" />

            <Spinner
                android:id="@+id/departure_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_date"
                android:textSize="16sp"
                android:paddingEnd="20dp" />

            <EditText
                android:id="@+id/departure_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="yyyy/MM/dd"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/seats_text"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/seats"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="32dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/search_route_button"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/black"
                    android:text="@string/Search_Route"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>
        </TableRow>


    </TableLayout>
</ScrollView>