<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/back"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/ticket_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/ticket_info"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/destination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/destination"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_destination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_point"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_departure_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_departure_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/departure_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/departure_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_departure_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/arrival_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_arrival_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="left"
                android:maxLines="1"
                android:paddingRight="20dp"
                android:text="@string/ticket_type"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingRight="20dp"
                android:text="@string/passenger_firstname"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Firstname"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingRight="20dp"
                android:text="@string/passenger_lastname"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Lastname"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/passenger_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingRight="20dp"
                android:text="@string/passenger_id"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_passenger_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/seats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingRight="20dp"
                android:text="@string/seats"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/seats_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingRight="20dp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="32dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buy_ticket_button"
                    android:layout_width="137dp"
                    android:layout_height="23dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:text="@string/buy_ticket"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </RelativeLayout>
        </TableRow>


    </TableLayout>
</ScrollView>